# pyhydros

./: .copilotignore  .gitignore  CHANGELOG.md  QUICK_REFERENCE.md  README.md  README.md:Zone.Identifier  THIRD_PARTY_LICENSES.md  __init__.py  pyhydros.py  pyproject.toml  release-please-config.json  requirements.txt  test_pyhydros.py
.github/workflows/: publish-pypi.yml  release-please.yml
